Closed Bug 469250 Opened 16 years ago Closed 15 years ago

Fix capitalization of Flashblock in Camino code/comments

Categories

(Camino Graveyard :: General, defect)

All
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: alqahira, Assigned: alqahira)

References

()

Details

Attachments

(2 files, 2 obsolete files)

Despite the ambiguous capitalization on flashblock.mozdev.org, the project is "Flashblock" (as established by comments in some bug and mozilla/camino/flashblock/README.

I have a patch that fixes this in code comments (and makes a few other grammar/punctuation changes to those comments I'm touching).

I'll attach it here for backup purposes, but it's not for review (or use) until the Flashblock whitelist and Chris's WebFeatures whitespace changes have landed.
Hardware: Macintosh → All
cl suggested we really should fix all the code as well; hendy's got a patch nearly ready for the context menu stuff, so this should wait until after that now.
Status: ASSIGNED → NEW
Summary: Fix capitalization of Flashblock in code comments → Fix capitalization of Flashblock in Camino code/comments
This patch brought to you by the miracles of mxr+find-and-replace.  I also fixed a couple of the Flashblock-related comments to have correct punctuation and/or grammar and/or line length.

This requires a nib change to get the updated whatever-they-are references into the .nib; I've tested and things seem to work fine, but I'm attaching it below and requesting a further sanity-check from someone who understands nib-code relationships ;)
Attachment #352661 - Attachment is obsolete: true
Attachment #385607 - Flags: superreview?(stuart.morgan+bugzilla)
Saved in IB 2.5.6, because I can.
Comment on attachment 385607 [details] [diff] [review]
Fix "Flashblock" in code and comments

Looks like you search-and-replaced FlashBlock, but not flashBlock.

>-  BOOL flashBlockAllowed = [self isFlashBlockAllowed];
>+  BOOL flashBlockAllowed = [self isFlashblockAllowed];
...
> - (void)flashBlockPrefChanged:(NSNotification*)inNotification
...
>   BOOL flashBlockEnabled = allowed && [self getBooleanPref:kGeckoPrefBlockFlash withSuccess:NULL];
Attachment #385607 - Flags: superreview?(stuart.morgan+bugzilla) → superreview-
> Looks like you search-and-replaced FlashBlock, but not flashBlock.

This is why we don't have me writing code ;-) I hadn't even realized we had other forms of mis-capitalization errors!

This patch s/FlashBlock/Flashblock/, s/flashBlock(.*)/flashblock\1/, and s/flashblock/Flashblock/ (some comments in CHBrowserView.{h|mm} and all-camino.js.in), which should now cover everything outside of filenames and paths.
Attachment #385607 - Attachment is obsolete: true
Attachment #385936 - Flags: superreview?(stuart.morgan+bugzilla)
Comment on attachment 385936 [details] [diff] [review]
Fix "Flashblock" in code and comments, take 2

Looks good, and the nib changes look sane. Thanks for taking care of this :)

sr=smorgan.
Attachment #385936 - Flags: superreview?(stuart.morgan+bugzilla) → superreview+
Landed on cvs trunk.
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: